--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-# PostgreSQL
+# Server
+PORT=3000
+NODE_ENV=development
+CLIENT_ORIGIN=http://localhost:5173
+
+# Database
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/drive_insights
 
 # Google OAuth
@@ -8,10 +13,3 @@ GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/google/callback
 
 # OpenAI
 OPENAI_API_KEY=
-
-# Server
-PORT=3000
-NODE_ENV=development
-
-# Client
-VITE_API_URL=http://localhost:3000/api
