--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,11 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "pinia": "^3.0.4",
     "vue": "^3.5.27",
-    "vue-router": "^5.0.1"
+    "vue-router": "^5.0.1",
+    "vuetify": "^3.11.8"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.4",
@@ -36,6 +38,7 @@
     "typescript": "~5.9.3",
     "vite": "^7.3.1",
     "vite-plugin-vue-devtools": "^8.0.5",
+    "vite-plugin-vuetify": "^2.1.3",
     "vue-tsc": "^3.2.4"
   }
 }
