--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "google-auth-library": "^10.5.0",
-    "googleapis": "^171.4.0"
+    "googleapis": "^171.4.0",
+    "openai": "^6.21.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
