--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,8 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/google/callback
 
+# JWT
+JWT_SECRET=
+
 # OpenAI
 OPENAI_API_KEY=
